tests/pat-not-cons-type/out.txt
error: mismatched types: expected a constructor type, found '25 * '25 list -> '25 list
  ┌─ err.sml:1:12
  │
1 │ val _ = fn op:: => 3
  │            ^^^^

typechecking failed
